# setup

./: .gitignore  CMakeLists.txt  README.md  cmake.template  options.json
src/: commands.cpp  commands.h  directories.cpp  directories.h  main.cpp  options.cpp  options.h
